--- a/mainapp/templates/mainapp/home.html
+++ b/mainapp/templates/mainapp/home.html
@@ -9,6 +9,7 @@
         text-decoration-color: #fff;
     }
 .card1 {
+    margin: 8px 8px 8px 8px;
   border-radius: 4px;
   background: 'transparent';
   transition: 0.3s transform cubic-bezier(0.155, 1.105, 0.295, 1.12),
@@ -86,7 +87,7 @@
                 <div class="card card1 card-chart">
                         <div class="card-header ">
                             <!-- / -->
-                            <h5 class="card-title card_top"><i class="tim-icons icon-bell-55 text-primary"></i> Gautam Kumar Jha</h5>
+                            <h5 class="card-title card_top"><i class="tim-icons icon-bell-55 text-primary"></i> Gautam Jha</h5>
                         </div>
                         <div class="card container_image">
                             <img src="{% static 'img/gautam_jha.jpeg' %}" class="custom_image image">
