--- a/mainapp/static/css/custom.css
+++ b/mainapp/static/css/custom.css
@@ -1,6 +1,4 @@
-.custom-button: {
 
-}
 
 .body_design {
 	background-color: #fff;
@@ -446,7 +444,7 @@ header
 
 .header-area .main-nav .menu-trigger span:before,
 .header-area .main-nav .menu-trigger span:after {
-  content: "";
+  content: "tjyfjfj";
 }
 
 .header-area .main-nav .menu-trigger span {
@@ -533,7 +531,7 @@ header
     opacity: 1;
   }
   .header-area {
-    background-color: #03A9F4;
+    background-color: #212F3C;
     padding: 0px 15px;
     height: 80px;
     box-shadow: none;
@@ -592,15 +590,15 @@ header
     line-height: 50px !important;
     padding: 0px !important;
     border: none !important;
-    background: #03A9F4 !important;
+    background: #ECF0F1 !important;
     color: #03A9F4 !important;
   }
   .header-area .main-nav .nav li:last-child a {
     color: #fff!important;
   }
   .header-area .main-nav .nav li a:hover {
-    background: #eee !important;
-    color: #03A9F4!important;
+    background: #03A9F4 !important;
+    color: #fff!important;
   }
   .header-area .main-nav .nav li.submenu ul {
     position: relative;
@@ -676,7 +674,7 @@ banner
 
 .main-banner .caption {
   text-align: center;
-  position: absolute;
+  position: relative;
   width: 80%;
   left: 50%;
   top: 50%;
@@ -751,42 +749,6 @@ features
   color: #03A9F4;
   font-weight: 500;
 }
-
-/*
----------------------------------------------
-subscribe
----------------------------------------------
-*/
-
-#call-to-action {
-  padding: 120px 0px;
-  background-image: url(../images/cta-bg.jpg);
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  text-align: center;
-}
-
-.cta-content h2 {
-  font-size: 36px;
-  /*text-transform: uppercase;*/
-  font-weight: 800;
-  color: black;
-  letter-spacing: 1px;
-}
-
-.cta-content h2 em {
-  font-style: normal;
-  color: ##03A9F4;
-}
-
-.cta-content p {
-  font-size: 16px;
-  color: black;
-  margin: 15px 0px 25px 0px;
-}
-
-
 
 /*
 --------------------------------------------
@@ -881,169 +843,6 @@ Our Classes
   margin-bottom: 28px;
 }
 
-
-/* 
----------------------------------------------
-schedule
---------------------------------------------- 
-*/
-
-#schedule {
-  padding: 0px 0px 140px 0px;
-  background-image: url(../images/schedule-bg.jpg);
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-#schedule table {
-  width: 100%;
-  text-align: center;
-  border: 1px solid #fff;
-}
-
-#schedule table tbody {
-  border-top: 1px solid #fff; 
-}
-
-#schedule table tbody tr {
-  border-bottom: 1px solid #fff;
-}
-
-#schedule table tbody tr td {
-  border-right: 1px solid #fff;
-  height: 100px;
-}
-
-#schedule table tr td {
-  color: #fff;
-  font-size: 13px;
-  text-transform: capitalize;
-  font-weight: 500;
-  letter-spacing: 0.25px;
-}
-
-.schedule-table.filtering .ts-item {
-    opacity: 0;
-    transition: all 0.5s;
-}
-
-.schedule-table.filtering .ts-item.show {
-    opacity: 1;
-    transition: all 0.5s;
-}
-
-#schedule .filters {
-  margin-bottom: 40px;
-}
-#schedule .filters ul {
-  padding: 0;
-  text-align: center;
-}
-#schedule .filters ul li {
-  list-style: none;
-  display: inline;
-  cursor: pointer;
-  position: relative;
-  margin-right: 10px;
-  font-size: 15px;
-  font-weight: 500;
-  color: #fff;
-  text-transform: capitalize;
-  -webkit-transition: all 0.3s ease-in-out;
-  -moz-transition: all 0.3s ease-in-out;
-  -o-transition: all 0.3s ease-in-out;
-  -ms-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
-}
-#schedule .filters ul li:after {
-  content: "/";
-  margin-left: 10px;
-  color: #fff;
-}
-#schedule .filters ul li:last-child {
-  margin-right: 0px;
-}
-#schedule .filters ul li:last-child::after {
-  display: none;
-}
-#schedule .filters ul li.active,
-#schedule .filters ul li:hover {
-  color: #03A9F4;
-}
-#schedule .filters-content {
-  margin-top: 50px;
-}
-#schedule .filters-content .show {
-  opacity: 1;
-  visibility: visible;
-  transition: all 350ms;
-}
-#schedule .filters-content .hide {
-  opacity: 0;
-  visibility: hidden;
-  transition: all 350ms;
-}
-
-
-/* 
----------------------------------------------
-trainers
---------------------------------------------- 
-*/
-
-#trainers .trainer-item {
-  background-color: #fff;
-  border-radius: 5px;
-  box-shadow: 0px 0px 15px rgba(0,0,0,0.1);
-  padding: 40px;
-}
-
-#trainers .trainer-item img {
-  width: 100%;
-  border-radius: 5px;
-}
-
-#trainers .trainer-item span {
-  font-size: 13px;
-  font-weight: 500;
-  color: #03A9F4;
-  display: inline-block;
-  margin-top: 25px;
-  margin-bottom: 10px;
-}
-
-#trainers .trainer-item h4 {
-  font-size: 19px;
-  font-weight: 600;
-  color: #03A9F4;
-  letter-spacing: 0.5px;
-  margin-bottom: 18px;
-}
-
-#trainers .trainer-item p {
-  margin-bottom: 20px;
-}
-
-#trainers .trainer-item ul.social-icons li {
-  display: inline-block;
-  margin-right: 12px;
-}
-
-#trainers .trainer-item ul.social-icons li:last-child {
-  margin-right: 0px;
-}
-
-#trainers .trainer-item ul.social-icons li a {
-  color: #03A9F4;
-  transition: all .3s;
-}
-
-#trainers .trainer-item ul.social-icons li a:hover {
-  color: #03A9F4;
-}
-
-
 /* 
 ---------------------------------------------
 contact
@@ -1060,7 +859,7 @@ contact
 
 #contact-us .contact-form {
   padding: 80px;
-  background-image: url(../images/contact-bg.jpg);
+  /*background-image: {% static url= %};*/
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -1152,109 +951,6 @@ footer p a:hover {
   color: #03A9F4;
 }
 
-
-
-/* 
----------------------------------------------
-preloader
---------------------------------------------- 
-*/
-
-.js-preloader {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #03A9F4;
-    display: -webkit-box;
-    display: flex;
-    -webkit-box-align: center;
-    align-items: center;
-    -webkit-box-pack: center;
-    justify-content: center;
-    opacity: 1;
-    visibility: visible;
-    z-index: 9999;
-    -webkit-transition: opacity 0.25s ease;
-    transition: opacity 0.25s ease;
-}
-
-.js-preloader.loaded {
-    opacity: 0;
-    visibility: hidden;
-    pointer-events: none;
-}
-
-@-webkit-keyframes dot {
-    50% {
-        -webkit-transform: translateX(96px);
-        transform: translateX(96px);
-    }
-}
-
-@keyframes dot {
-    50% {
-        -webkit-transform: translateX(96px);
-        transform: translateX(96px);
-    }
-}
-
-@-webkit-keyframes dots {
-    50% {
-        -webkit-transform: translateX(-31px);
-        transform: translateX(-31px);
-    }
-}
-
-@keyframes dots {
-    50% {
-        -webkit-transform: translateX(-31px);
-        transform: translateX(-31px);
-    }
-}
-
-.preloader-inner {
-    position: relative;
-    width: 142px;
-    height: 40px;
-    background: #03A9F4;
-}
-
-.preloader-inner .dot {
-    position: absolute;
-    width: 16px;
-    height: 16px;
-    top: 12px;
-    left: 15px;
-    background: #fff;
-    border-radius: 50%;
-    -webkit-transform: translateX(0);
-    transform: translateX(0);
-    -webkit-animation: dot 2.8s infinite;
-    animation: dot 2.8s infinite;
-}
-
-.preloader-inner .dots {
-    -webkit-transform: translateX(0);
-    transform: translateX(0);
-    margin-top: 12px;
-    margin-left: 31px;
-    -webkit-animation: dots 2.8s infinite;
-    animation: dots 2.8s infinite;
-}
-
-.preloader-inner .dots span {
-    display: block;
-    float: left;
-    width: 16px;
-    height: 16px;
-    margin-left: 16px;
-    background: #fff;
-    border-radius: 50%;
-}
-
-
 /* 
 ---------------------------------------------
 responsive
@@ -1265,7 +961,11 @@ responsive
 @media (max-width: 992px) {
 
   .main-banner .caption h2 {
-    font-size: 64px;
+    text-align: center;
+    /*position: relative;*/
+    width: 100%;
+    left: 50%;
+    font-size: 40px;
   }
   #features {
     margin-bottom: 110px;
