--- a/mainapp/templates/mainapp/dashboard.html
+++ b/mainapp/templates/mainapp/dashboard.html
@@ -46,6 +46,11 @@
     	margin-top: 80px;
         background-color: #1C1C1C;
     }
+    @media (max-width: 992px){
+    .cardbottom{
+        margin-bottom: 18px;
+    }
+}
     .row_side_padding {
         margin-left: 20px;
         margin-right:20px;
@@ -127,7 +132,7 @@
 <div class="dashboard_background">
 
 <div class="row row_side_padding">
-        <div class="col-md-6 column_side_padding ">
+        <div class="col-md-6 column_side_padding cardbottom ">
             <div class="card1 card-chart">
                 <!-- <div class="card-header ">
                     <h5 class="card-category card_top">Total Employee</h5>
@@ -141,7 +146,7 @@
             </div>
         </div>
         <div class="col-md-6">
-            <div class="card1 card-chart">
+            <div class="card1 card-chart cardbottom">
                 <!-- <div class="card-header">
                     <h5 class="card-category card_top">Daily Sales</h5>
                     <h3 class="card-title card_top"><i class="tim-icons icon-delivery-fast text-info"></i> 3,500</h3>
@@ -159,8 +164,8 @@
 
 
 <div class="row row_side_padding">
-        <div class="col-lg-4 column_side_padding ">
-            <div class=" card1 card-chart">
+        <div class="col-lg-4 column_side_padding">
+            <div class=" card1 card-chart cardbottom">
                 <div class="card-header ">
                     <h5 class="card-category card_top">Total Employee</h5>
                     <h3 class="card-title card_top"><i class="tim-icons icon-bell-55 text-primary"></i> {{total_employee}}</h3>
@@ -175,7 +180,7 @@
 
 <!-- swapping cards -->
 <div class="col-lg-4">
-        <div class=" card1 card-chart" id="customer_card">
+        <div class=" card1 card-chart cardbottom" id="customer_card">
                 <div class="card-header">
                     <h5 class="card-category card_top">Total Customers</h5>
                     <div class="row">
@@ -198,7 +203,7 @@
                     </div>
                 </div>
             </div> 
-            <div class=" card1 card-chart" id="vendor_card" style="display:none">
+            <div class=" card1 card-chart cardbottom" id="vendor_card" style="display:none">
                 <div class="card-header">
                     <h5 class="card-category card_top">Total Vendors</h5>
                     <div class="row">
@@ -223,7 +228,7 @@
   </div>
 
         <div class="col-lg-4">
-            <div class=" card1 card-chart">
+            <div class=" card1 card-chart cardbottom">
                 <div class="card-header">
                     <h5 class="card-category card_top">Total Production</h5>
                     <h3 class="card-title card_top"><i class="tim-icons icon-delivery-fast text-info"></i>{{total_production.amount__sum}}</h3>
@@ -239,7 +244,7 @@
 
     <div class="row row_side_padding">
         <div class="col-lg-4">
-            <div class=" card1 card-chart">
+            <div class=" card1 card-chart cardbottom">
                 <div class="card-header">
                     <h5 class="card-category card_top">Maintenance Overhead</h5>
                     <div class="row">
@@ -260,7 +265,7 @@
             </div>
         </div>
         <div class="col-lg-4">
-            <div class=" card1 card-chart">
+            <div class=" card1 card-chart cardbottom">
                 <div class="card-header">
                     <h5 class="card_top">Total Machine Count</h5>
                     <h3 class="card_top"><i class="tim-icons icon-delivery-fast text-info"></i> {{total_machines}} </h3>
@@ -273,7 +278,7 @@
             </div>
         </div>
         <div class="col-lg-4">
-            <div class=" card1 card-chart">
+            <div class=" card1 card-chart cardbottom">
                 <div class="card-header">
                     <form id="submit_bookmark" method="POST">
                         {% csrf_token %}
