--- a/mainapp/templates/mainapp/delete_view.html
+++ b/mainapp/templates/mainapp/delete_view.html
@@ -4,13 +4,13 @@
 
 <div class="container contact">
     <div class="row">
-        <div class="col-md-3">
+       <!--  <div class="col-md-3">
             <div class="contact-info">
-                <!-- <img src="https://image.ibb.co/kUASdV/contact-image.png" alt="image"/> -->
+                <img src="https://image.ibb.co/kUASdV/contact-image.png" alt="image"/>
                 
             </div>
-        </div>
-        <div class="col-md-9">
+        </div> -->
+        <div class="col-md-12">
 
             <form action="" method="POST">
                 {% csrf_token %}
