--- a/mainapp/static/css/simple-sidebar.css
+++ b/mainapp/static/css/simple-sidebar.css
@@ -1,8 +1,3 @@
-/*!
- * Start Bootstrap - Simple Sidebar (https://startbootstrap.com/template/simple-sidebar)
- * Copyright 2013-2020 Start Bootstrap
- * Licensed under MIT (https://github.com/StartBootstrap/startbootstrap-simple-sidebar/blob/master/LICENSE)
- */
 .format-css-2{
   margin-top: 80px;
   /*padding: 50px 0px 100px 100px;*/
@@ -11,9 +6,14 @@
  #wrapper {
     overflow-x: hidden;
  }
-
+.sidebartext{
+  color:#2E86C1;
+}
 #sidebar-wrapper {
-  background-color: rgba(3, 155, 229,0.5);
+  /*background-color: rgba(3, 155, 229,0.5);*/
+  /*text-align: center;*/
+  color: #fff;
+   background-color: #212F3C;
   min-height: 100vh;
   margin-left: -15rem;
   -webkit-transition: margin .25s ease-out;
@@ -28,16 +28,17 @@
 }
 
 #sidebar-wrapper .list-group {
-  background-color: rgba(3, 155, 229,0.5);
+  /*background-color: rgba(3, 155, 229,0.5);*/
   width: 15rem;
 }
 
 #page-content-wrapper {
+  color: #fff;
   min-width: 100vw;
 }
 
 #wrapper.toggled #sidebar-wrapper {
-  background-color: rgba(3, 155, 229,0.5);
+  /*background-color: rgba(3, 155, 229,0.5);*/
   margin-left: 0;
 }
 
