--- a/mainapp/templates/mainapp/application.html
+++ b/mainapp/templates/mainapp/application.html
@@ -7,25 +7,27 @@
     background-color: #039BE5;
     text-decoration-color: #fff;
   }
+  .list-group-item-action, .sidebar-heading{
+    color: #fff;
+    background-color: #212F3C;
+  }
 </style>
-
-
 
   <link href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
   <link href="{% static 'css/simple-sidebar.css' %}" rel="stylesheet">
 <body class="format-css-2">
   <div class="d-flex format-css-2" id="wrapper" >
     <!-- Sidebar -->
-    <div class="border-right" id="sidebar-wrapper" style="background-color: rgba(3, 155, 229,0.5);">
-      <div class="sidebar-heading" style="background-color: rgba(3, 155, 229,0.5);">Application </div>
+    <div class="" id="sidebar-wrapper">
+      <div class="sidebar-heading">Application </div>
       <div class="list-group list-group-flush application_menu" >
-        <a href="{% url 'products' user.id %}" class="sidebar-heading list-group-item-action application_btn active1" >Products</a>
-        <a href="{% url 'machine-list' user.id %}" class="sidebar-heading list-group-item-action application_btn">Machine</a>
-        <a href="{% url 'update_employee' %}" class="sidebar-heading list-group-item-action application_btn">Employee</a>
-        <a href="{% url 'customer-list' user.id %}" class="sidebar-heading list-group-item-action  application_btn">Customers</a>
-        <a href="{% url 'vendor-list' user.id %}" class="sidebar-heading list-group-item-action application_btn">Vendors</a>
-        <a href="{% url 'sales-order-view' user.id %}" class="sidebar-heading list-group-item-action  application_btn">Sales Order</a>
-        <a href="{% url 'purchase-order-view' user.id %}" class="sidebar-heading list-group-item-action  application_btn">Purchase Order</a>
+        <a href="{% url 'products' user.id %}" class="sidebar-heading list-group-item-action active1 sidebartext" >Products</a>
+        <a href="{% url 'machine-list' user.id %}" class="sidebar-heading list-group-item-action sidebartext">Machine</a>
+        <a href="{% url 'update_employee' %}" class="sidebar-heading list-group-item-action sidebartext">Employee</a>
+        <a href="{% url 'customer-list' user.id %}" class="sidebar-heading list-group-item-action sidebartext ">Customers</a>
+        <a href="{% url 'vendor-list' user.id %}" class="sidebar-heading list-group-item-action sidebartext">Vendors</a>
+        <a href="{% url 'sales-order-view' user.id %}" class="sidebar-heading list-group-item-action sidebartext ">Sales Order</a>
+        <a href="{% url 'purchase-order-view' user.id %}" class="sidebar-heading list-group-item-action  sidebartext">Purchase Order</a>
       </div>
     </div>
     <!-- /#sidebar-wrapper -->
@@ -33,9 +35,10 @@
     <!-- Page Content -->
     <div id="page-content-wrapper">
 
-      <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
-        <button class="btn btn-info" style="background-color: #03A9F4;" id="menu-toggle">Toggle Menu</button>
-      </nav>
+      <!-- <nav class="navbar navbar-fixed navbar-expand-lg navbar-light bg-light border-bottom"> -->
+        <button id="menu-toggle"><b><-></b></button>
+      <!-- </nav> -->
+      
 
       <div class="container-fluid">
         {% block application_content %}
