--- a/mainapp/templates/mainapp/create_designation.html
+++ b/mainapp/templates/mainapp/create_designation.html
@@ -4,14 +4,14 @@
 
 <div class="container contact">
   <div class="row">
-    <div class="col-md-3">
+   <!--  <div class="col-md-3">
         
-    </div>
-    <div class="col-md-9">
+    </div> -->
+    <div class="col-md-12">
 
         <form action="" method="POST">
             {% csrf_token %}
-                <div class="contact-form">
+                <div class="contact-form" style="color: black">
                     <!-- <fieldset>gautam</fieldset> -->
                     <fieldset>{{form|crispy}}</fieldset>
                 </div>
