--- a/mainapp/templates/mainapp/customer_detail.html
+++ b/mainapp/templates/mainapp/customer_detail.html
@@ -4,12 +4,12 @@
 
 <div class="container">
 	<div class="row">
-	<div class="col-2">
-	</div>
-    <div class="col-9 col-md-offset-9 custyle">
+	<!-- <div class="col-2">
+	</div> -->
+    <div class="col-12  custyle">
         <a href="{% url 'customer-edit' object.id %}" class="btn text-info btn-xs pull-right"><b>-</b> Edit Customer Details</a>
         <a href="{% url 'customer-delete' object.id %}" class="btn text-info btn-xs pull-right"><b>-</b> Delete Customer</a>
-    <table class="table table-striped">
+    <table class="table table-striped table-responsive">
         <legend>Customer Details</legend>
         <tr>
             <td>Firm Name:</td><td>{{object.firm_name}}</td>
@@ -36,8 +36,8 @@
             <td>Remarks:</td><td>{{object.remarks}}</td> 
         </tr>
     </table>
-    <table class="table table-striped">
-    <legend>Sales Orders by {{object.firm_name}} ({{items|length}})</legend>
+    <table class="table table-striped  table-responsive">
+    <legend style="color: black">Sales Orders by {{object.firm_name}} ({{items|length}})</legend>
         <thead>
         <tr>
             <th class="text-center">#</th>
