--- a/mainapp/templates/mainapp/customer_list.html
+++ b/mainapp/templates/mainapp/customer_list.html
@@ -4,13 +4,12 @@
 
 <div class="container">
 	<div class="row">
-	<div class="col-2">
-	</div>
-    <div class="col-9 col-md-offset-9 custyle">
-    <table class="table table-striped">
+	
+    <div class="col-12  custyle">
+    <table class="table table-striped table-responsive">
     <thead>
     <a href="{% url 'customer-create' user.id %}" class="btn text-info btn-xs pull-right"><b>+</b> Add New Customer</a>
-    <legend>Customers ({{item|length}})</legend>    
+    <legend style="color: black">Customers ({{item|length}})</legend>    
     <tr>
             <th class="text-center">#</th>
             <th class="text-center">Firm Name</th>
