--- a/mainapp/templates/mainapp/edit_view.html
+++ b/mainapp/templates/mainapp/edit_view.html
@@ -4,12 +4,12 @@
 
 <div class="container contact">
     <div class="row">
-        <div class="col-md-3">
+        <!-- <div class="col-md-3">
             <div class="contact-info">
-                <!-- <img src="https://image.ibb.co/kUASdV/contact-image.png" alt="image"/> -->
+                <img src="https://image.ibb.co/kUASdV/contact-image.png" alt="image"/>
                 
             </div>
-        </div>
+        </div> -->
         <div class="col-md-9">
 
             <form action="" method="POST">
@@ -19,7 +19,7 @@
                 <div class="form-group">
                     <div class="col-sm-10">          
                     <!-- <input type="text" class="form-control" id="fname" placeholder="Enter First Name" name="fname"> -->
-                        <div > {{form|crispy}}</div>
+                        <div style="color: black"> {{form|crispy}}</div>
                   </div>
             </div>
             <div class="form-group">        
