--- a/mainapp/templates/mainapp/machine_list.html
+++ b/mainapp/templates/mainapp/machine_list.html
@@ -4,10 +4,10 @@
 
 <div class="container">
 	<div class="row">
-	<div class="col-2">
-	</div>
-    <div class="col-9 col-md-offset-9 custyle">
-    <table class="table table-striped">
+	<!-- <div class="col-2">
+	</div> -->
+    <div class="col-12 col-md-offset-12 custyle">
+    <table class="table table-striped table-responsive">
     <thead>
     <a href="{% url 'maintenance-list' user.id %}" class="btn text-info btn-xs pull-right"><b>-></b> Maintenance</a>
     <a href="{% url 'machine-create' user.id %}" class="btn text-info btn-xs pull-right"><b>+</b> Add New Machine</a>
