--- a/mainapp/templates/mainapp/vendor_list.html
+++ b/mainapp/templates/mainapp/vendor_list.html
@@ -4,10 +4,9 @@
 
 <div class="container">
 	<div class="row">
-	<div class="col-2">
-	</div>
-    <div class="col-9 col-md-offset-9 custyle">
-    <table class="table table-striped">
+	
+    <div class="col-12 col-md-offset-12 custyle">
+    <table class="table table-striped table-responsive">
     <thead>
     <a href="{% url 'vendor-create' user.id %}" class="btn text-info btn-xs pull-right"><b>+</b> Add New Vendor</a>
     <legend>Vendors ({{item|length}})</legend>    
