testing exit button on charts

--- a/mainapp/templates/mainapp/dashboard.html
+++ b/mainapp/templates/mainapp/dashboard.html
@@ -121,10 +121,10 @@
 .buttonpadding{
     padding: 0 0 0 0;
 }
-/*#myBox1:fullscreen,#myBox2:fullscreen,#myBox3:fullscreen,#myBox4:fullscreen,#myBox5:fullscreen,#myBox6:fullscreen,#myBox7:fullscreen,#myBox8:fullscreen,#myBox9:fullscreen {
+#myBox1:fullscreen,#myBox2:fullscreen,#myBox3:fullscreen,#myBox4:fullscreen,#myBox5:fullscreen,#myBox6:fullscreen,#myBox7:fullscreen,#myBox8:fullscreen,#myBox9:fullscreen {
   width: 100vw;
-  height: 100vh;
-   }*/
+  height: 80vh;
+   }
 </style>
 
 <!-- <link id="dark-theme-style" rel="stylesheet" />
